# tvrecord

./: README.md  app.py  check.py  pyproject.toml  updatedb.py
tests/: test_dvbstreamer.py  test_monitor.py  test_tvrecord.py
tvrecord/: __init__.py  config.py  credential.py  html.py  strings.py  updatedb.py  views.py
tvrecord/static/: style.css
tvrecord/templates/: base.html  channel.html  channels.html  index.html  program.html
tvrecord/tvrecorddb/: __init__.py  db.py  models.py  wrangler.py
tvrecord/tvrecorder/: __init__.py  dvbctrl.py  dvbstreamer.py  monitor.py  monitorrecorder.py  monitortv.service  shell.py
tvrecord/tvrecordsd/: sdapi.py
