[tool.poetry]
name = "tvrecord"
version = "0.1.6"
description = "A set of modules to record TV from a TV Card."
authors = ["ccdale <chris.charles.allison+tvrecord@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ccaerrors = "^0.1.2"
ccalogging = "^0.4.3"
ccaconfig = "^0.3.10"
SQLAlchemy = "^1.4.39"
PyMySQL = "^1.0.2"
keyring = "^23.7.0"
Flask = "^2.1.3"
Flask-WTF = "^1.0.1"
dvbctrl = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
